--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".DetailsActivity">
 
+
     <ImageView
         android:id="@+id/student_avatar_img"
         android:layout_width="164dp"
         android:layout_height="121dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/avatar" />
 
@@ -22,10 +24,10 @@
         android:layout_marginTop="30dp"
         android:text="Name:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/student_avatar_img" />
 
-    <EditText
+    <TextView
         android:id="@+id/student_name_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -34,9 +36,10 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewName"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textViewName" />
+        android:clickable="false"
+        app:layout_constraintEnd_toStartOf="@+id/textViewName" />
 
     <TextView
         android:id="@+id/textViewId"
@@ -46,10 +49,10 @@
         android:layout_marginTop="30dp"
         android:text="Id:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewName" />
 
-    <EditText
+    <TextView
         android:id="@+id/student_id_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -58,8 +61,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewId"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewId" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewId" />
 
     <TextView
         android:id="@+id/textViewPhone"
@@ -69,10 +72,10 @@
         android:layout_marginTop="30dp"
         android:text="Phone:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewId" />
 
-    <EditText
+    <TextView
         android:id="@+id/student_phone_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -81,8 +84,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewPhone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewPhone" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewPhone" />
 
     <TextView
         android:id="@+id/textViewAddress"
@@ -92,20 +95,17 @@
         android:layout_marginTop="30dp"
         android:text="Address:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />
 
-    <EditText
+    <TextView
         android:id="@+id/student_address_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewAddress" />
+        app:layout_constraintEnd_toStartOf="@+id/textViewAddress" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -114,7 +114,18 @@
         android:text="Checked"
         tools:layout_editor_absoluteX="77dp"
         tools:layout_editor_absoluteY="341dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:clickable="false"
         app:layout_constraintTop_toBottomOf="@+id/textViewAddress"/>
+
+    <Button
+        android:id="@+id/edit_btn"
+        android:layout_width="87dp"
+        android:layout_height="54dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="EDIT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
