--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -10,7 +10,7 @@
         android:id="@+id/student_avatar_img"
         android:layout_width="164dp"
         android:layout_height="121dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/avatar" />
 
@@ -22,7 +22,7 @@
         android:layout_marginTop="30dp"
         android:text="Name:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/student_avatar_img" />
 
 
@@ -35,9 +35,9 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewName"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textViewName" />
+        app:layout_constraintEnd_toStartOf="@+id/textViewName" />
 
     <TextView
         android:id="@+id/textViewId"
@@ -47,7 +47,7 @@
         android:layout_marginTop="30dp"
         android:text="Id:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewName" />
 
     <EditText
@@ -59,8 +59,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewId"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewId" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewId" />
 
     <TextView
         android:id="@+id/textViewPhone"
@@ -70,7 +70,7 @@
         android:layout_marginTop="30dp"
         android:text="Phone:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewId" />
 
     <EditText
@@ -82,8 +82,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewPhone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewPhone" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewPhone" />
 
     <TextView
         android:id="@+id/textViewAddress"
@@ -93,7 +93,7 @@
         android:layout_marginTop="30dp"
         android:text="Address:"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />
 
     <EditText
@@ -105,8 +105,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewAddress" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewAddress" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -115,7 +115,45 @@
         android:text="Checked"
         tools:layout_editor_absoluteX="77dp"
         tools:layout_editor_absoluteY="341dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewAddress"/>
+
+    <Button
+        android:id="@+id/addstudent_save_btn"
+        android:layout_width="134dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="28dp"
+        android:text="SAVE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/addstudent_delete_btn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/addstudent_delete_btn"
+        android:layout_width="112dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="DELETE"
+        app:layout_constraintBaseline_toBaselineOf="@+id/addstudent_save_btn"
+        app:layout_constraintEnd_toEndOf="@+id/addstudent_cancell_btn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/addstudent_cancell_btn"
+        android:layout_width="111dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="CANCEL"
+        app:layout_constraintBaseline_toBaselineOf="@+id/addstudent_save_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/addstudent_delete_btn" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
